# Moving-Objects-Tracking-OpenCV-

./: .gitignore  CMakeLists.txt  Note.md  README.md
include/: ClassInclude.h  Track.h
src/: ContourDetect.cpp  Track.cpp  backGroundsub.cpp  main.cpp
